// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations createUser accesses the prisma client one time with appropriate arguments to create a user and returns the newly created user 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "admin": 2,
      "id": "1",
      "username": "lysha",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations createUser accesses the prisma client to create a user and returns the newly created user 1`] = `
Object {
  "data": Object {
    "createUser": Object {
      "admin": 2,
      "id": "1",
      "username": "lysha",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations updateUser accesses the prisma client with the proper variables and returns the updated user 1`] = `
Object {
  "data": Object {
    "updateUser": Object {
      "admin": 2,
      "id": "1",
      "username": "lysha smith",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries getUser queries the prisma client once with appropriate arguments and returns the user 1`] = `
Object {
  "data": Object {
    "getUser": Object {
      "admin": 2,
      "id": "1",
      "username": "lysha",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries getUsers fetches a list of users 1`] = `
Object {
  "data": Object {
    "getUsers": Array [
      Object {
        "admin": 2,
        "id": "1",
        "token": null,
        "username": "lysha",
      },
      Object {
        "admin": 1,
        "id": "2",
        "token": null,
        "username": "eric",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`getUsers fetches a list of users 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [ValidationError: Cannot query field "id" on type "Query".],
    [ValidationError: Cannot query field "username" on type "Query".],
    [ValidationError: Cannot query field "admin" on type "Query".],
    [ValidationError: Cannot query field "token" on type "Query".],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
